objects/TransactionTerr__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Transcations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Transcations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Big Tickets (Firm)</relationshipLabel>
        <relationshipName>Big_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrossAmount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfTickets__c</fullName>
        <label>Number of Tickets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessDate__c</fullName>
        <description>When the trade is processed by the Transfer Agency.</description>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>Product Type of the corresponding product</description>
        <formula>Text(Product__r.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Transcations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Big Tickets</relationshipLabel>
        <relationshipName>Big_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScrubDateReporting__c</fullName>
        <formula>datevalue(ScrubDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrub Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScrubDate__c</fullName>
        <label>Scrub Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SequenceKey__c</fullName>
        <label>SequenceKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SettleCode__c</fullName>
        <label>Settle Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Big Tickets</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeDate__c</fullName>
        <label>Trade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TradeID__c</fullName>
        <externalId>true</externalId>
        <label>Trade ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchases</fullName>
                </value>
                <value>
                    <fullName>Redemptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK('/'&amp; Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <description>One day worth of data - Scrub Date of Last business day which includes manually scrubbed and auto resolved. Updated daily. Has data at the Territory level.</description>
    <label>Big Ticket</label>
    <nameField>
        <displayFormat>TR-{0000000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All_Big_Tickets</fullName>
        <columns>View__c</columns>
        <columns>Account__c</columns>
        <columns>Territory__c</columns>
        <columns>Platform__c</columns>
        <columns>Product__c</columns>
        <columns>NumberOfTickets__c</columns>
        <columns>GrossAmount__c</columns>
        <columns>ProcessDate__c</columns>
        <columns>Tier__c</columns>
        <columns>RepZone__c</columns>
        <columns>ScrubDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Big Tickets</label>
    </listViews>
    <listViews>
        <fullName>Big_Redemptions</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>GrossAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TransactionType__c</field>
            <operation>equals</operation>
            <value>Redemptions</value>
        </filters>
        <filters>
            <field>GrossAmount__c</field>
            <operation>greaterOrEqual</operation>
            <value>1000000</value>
        </filters>
        <filters>
            <field>TradeDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Big Redemptions This Month</label>
    </listViews>
    <listViews>
        <fullName>Purchases</fullName>
        <columns>View__c</columns>
        <columns>Firm__c</columns>
        <columns>Territory__c</columns>
        <columns>GrossAmount__c</columns>
        <columns>ProcessDate__c</columns>
        <columns>TradeDate__c</columns>
        <columns>Product__c</columns>
        <columns>ScrubDate__c</columns>
        <columns>ScrubDateReporting__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NumberOfTickets__c</columns>
        <columns>RepZone__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TransactionType__c</field>
            <operation>equals</operation>
            <value>Purchases</value>
        </filters>
        <label>Purchases</label>
    </listViews>
    <listViews>
        <fullName>Purchases_Last_30_Days</fullName>
        <columns>ProcessDate__c</columns>
        <columns>View__c</columns>
        <columns>GrossAmount__c</columns>
        <columns>TradeDate__c</columns>
        <columns>ScrubDate__c</columns>
        <columns>Territory__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NumberOfTickets__c</columns>
        <columns>Product__c</columns>
        <columns>RepZone__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TransactionType__c</field>
            <operation>equals</operation>
            <value>Purchases</value>
        </filters>
        <filters>
            <field>ProcessDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Purchases Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Purchases_Last_30_DaysWF</fullName>
        <columns>ProcessDate__c</columns>
        <columns>View__c</columns>
        <columns>GrossAmount__c</columns>
        <columns>TradeDate__c</columns>
        <columns>ScrubDate__c</columns>
        <columns>Territory__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NumberOfTickets__c</columns>
        <columns>Product__c</columns>
        <columns>RepZone__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TransactionType__c</field>
            <operation>equals</operation>
            <value>Purchases</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>OAKMARK INTERNATIONAL</value>
        </filters>
        <label>Purchases Last 30 Days WF</label>
    </listViews>
    <listViews>
        <fullName>Purchases_Last_3_Days</fullName>
        <columns>View__c</columns>
        <columns>GrossAmount__c</columns>
        <columns>ProcessDate__c</columns>
        <columns>ScrubDate__c</columns>
        <columns>Territory__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NumberOfTickets__c</columns>
        <columns>Product__c</columns>
        <columns>RepZone__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TransactionType__c</field>
            <operation>equals</operation>
            <value>Purchases</value>
        </filters>
        <filters>
            <field>ProcessDate__c</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Purchases Last 3 Days</label>
    </listViews>
</CustomObject>